--- a/src/additional-css.css
+++ b/src/additional-css.css
@@ -116,7 +116,20 @@ footer.footer
   > p {
   margin: 0.5em 0;
 }
-/* Bring miniOrange SAML login block in line with other footer links */
+/* Bring miniOrange login block in line with other footer links */
+footer.footer
+  > section.footer-1
+  > div.container
+  > div.row
+  > aside.col-sm-3.widget.widget_block
+  > div.sidebarBox
+  > div.wp-block-columns
+  > div.wp-block-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+/* Style miniOrange login button like BC Design Secondary Button */
 footer.footer
   > section.footer-1
   > div.container
@@ -125,8 +138,78 @@ footer.footer
   > div.sidebarBox
   > div.wp-block-columns
   > div.wp-block-column
-  > div.widget.widget_saml_login_widget {
+  > div.widget.widget_mooauth_widget
+  > a
+  > div.mo_oauth_login_button_widget {
+  background: none;
+  border-radius: 4px;
+  border: 2px solid white;
+  box-shadow: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
   margin: 0.5em 0;
+  max-width: 300px;
+}
+footer.footer
+  > section.footer-1
+  > div.container
+  > div.row
+  > aside.col-sm-3.widget.widget_block
+  > div.sidebarBox
+  > div.wp-block-columns
+  > div.wp-block-column
+  > div.widget.widget_mooauth_widget
+  > a:hover
+  > div.mo_oauth_login_button_widget {
+  background-color: white;
+}
+footer.footer
+  > section.footer-1
+  > div.container
+  > div.row
+  > aside.col-sm-3.widget.widget_block
+  > div.sidebarBox
+  > div.wp-block-columns
+  > div.wp-block-column
+  > div.widget.widget_mooauth_widget
+  > a
+  > div.mo_oauth_login_button_widget
+  > i.fa.fa-lock.mo_oauth_login_button_icon_widget {
+  border-right: none;
+  height: unset;
+  margin: 0 5px 0 0;
+  padding: 0px;
+}
+footer.footer
+  > section.footer-1
+  > div.container
+  > div.row
+  > aside.col-sm-3.widget.widget_block
+  > div.sidebarBox
+  > div.wp-block-columns
+  > div.wp-block-column
+  > div.widget.widget_mooauth_widget
+  > a:hover
+  > div.mo_oauth_login_button_widget
+  > i.fa.fa-lock.mo_oauth_login_button_icon_widget {
+  color: #313132;
+}
+footer.footer
+  > section.footer-1
+  > div.container
+  > div.row
+  > aside.col-sm-3.widget.widget_block
+  > div.sidebarBox
+  > div.wp-block-columns
+  > div.wp-block-column
+  > div.widget.widget_mooauth_widget
+  > a:hover
+  > div.mo_oauth_login_button_widget
+  > h3.mo_oauth_login_button_text_widget {
+  color: #313132 !important;
+  text-decoration: underline;
 }
 /* Utility class to add a light grey border to any div */
 div.border-rectangle {
