--- a/src/additional-css.css
+++ b/src/additional-css.css
@@ -7,6 +7,38 @@ bcgov-header header div.bcgov-search-container {
   flex-shrink: 1;
   flex-basis: auto;
 }
+/* Search results page */
+body.search.search-results div.wp-block-engagement-content article {
+  border-bottom: none;
+  padding-bottom: 0;
+}
+body.search.search-results
+  div.wp-block-engagement-content
+  article:first-of-type {
+  margin-top: 1rem;
+}
+body.search.search-results
+  div.wp-block-engagement-content
+  article
+  h2.entry-title {
+  font-size: 18px;
+}
+body.search.search-results
+  div.wp-block-engagement-content
+  article
+  h2.entry-title
+  a:hover {
+  color: #2b4777;
+  text-decoration: none;
+}
+body.search.search-results div.pagination {
+  display: block;
+  margin: 2.5rem 0 1.5rem 0;
+  text-align: center;
+}
+body.search.search-results div.pagination > a {
+  margin: 0 0.25rem;
+}
 /* Links within Engagement containers */
 div.wp-block-engagement-container div.wp-block-engagement-content a,
 div.wp-block-engagement-container div.wp-block-engagement-content a.active,
