--- a/src/additional-css.css
+++ b/src/additional-css.css
@@ -161,17 +161,7 @@ footer.footer
   justify-content: space-around;
 }
 /* Style miniOrange login button like BC Design Secondary Button */
-footer.footer
-  > section.footer-1
-  > div.container
-  > div.row
-  > aside.col-sm-3.widget.widget_block
-  > div.sidebarBox
-  > div.wp-block-columns
-  > div.wp-block-column
-  > div.widget.widget_mooauth_widget
-  > a
-  > div.mo_oauth_login_button_widget {
+div.widget.widget_mooauth_widget > a > div.mo_oauth_login_button_widget {
   background: none;
   border-radius: 4px;
   border: 2px solid white;
@@ -183,28 +173,10 @@ footer.footer
   margin: 0.5em 0;
   max-width: 300px;
 }
-footer.footer
-  > section.footer-1
-  > div.container
-  > div.row
-  > aside.col-sm-3.widget.widget_block
-  > div.sidebarBox
-  > div.wp-block-columns
-  > div.wp-block-column
-  > div.widget.widget_mooauth_widget
-  > a:hover
-  > div.mo_oauth_login_button_widget {
+div.widget.widget_mooauth_widget > a:hover > div.mo_oauth_login_button_widget {
   background-color: white;
 }
-footer.footer
-  > section.footer-1
-  > div.container
-  > div.row
-  > aside.col-sm-3.widget.widget_block
-  > div.sidebarBox
-  > div.wp-block-columns
-  > div.wp-block-column
-  > div.widget.widget_mooauth_widget
+div.widget.widget_mooauth_widget
   > a
   > div.mo_oauth_login_button_widget
   > i.fa.fa-lock.mo_oauth_login_button_icon_widget {
@@ -213,33 +185,41 @@ footer.footer
   margin: 0 5px 0 0;
   padding: 0px;
 }
-footer.footer
-  > section.footer-1
-  > div.container
-  > div.row
-  > aside.col-sm-3.widget.widget_block
-  > div.sidebarBox
-  > div.wp-block-columns
-  > div.wp-block-column
-  > div.widget.widget_mooauth_widget
+div.widget.widget_mooauth_widget
   > a:hover
   > div.mo_oauth_login_button_widget
   > i.fa.fa-lock.mo_oauth_login_button_icon_widget {
   color: #313132;
 }
-footer.footer
-  > section.footer-1
-  > div.container
-  > div.row
-  > aside.col-sm-3.widget.widget_block
-  > div.sidebarBox
-  > div.wp-block-columns
-  > div.wp-block-column
-  > div.widget.widget_mooauth_widget
+div.widget.widget_mooauth_widget
   > a:hover
   > div.mo_oauth_login_button_widget
   > h3.mo_oauth_login_button_text_widget {
-  color: #313132 !important;
+  color: white !important;
+}
+/* Replace "Login with Keycloak" text with "Log in with IDIR" visually */
+/* This method will keep the original button text for screen readers */
+div.widget.widget_mooauth_widget
+  > a
+  > div.mo_oauth_login_button_widget
+  > h3.mo_oauth_login_button_text_widget {
+  color: rgba(0, 0, 0, 0.01) !important;
+}
+div.widget.widget_mooauth_widget
+  > a
+  > div.mo_oauth_login_button_widget
+  > h3.mo_oauth_login_button_text_widget::after {
+  content: "Log in with IDIR";
+  display: block;
+  color: white;
+}
+div.widget.widget_mooauth_widget
+  > a:hover
+  > div.mo_oauth_login_button_widget
+  > h3.mo_oauth_login_button_text_widget::after {
+  content: "Log in with IDIR";
+  display: block;
+  color: #313132;
   text-decoration: underline;
 }
 /* Utility class to add a light grey border to any div */
