--- a/src/saas/additional-css.css
+++ b/src/saas/additional-css.css
@@ -6,6 +6,42 @@ div.border-rectangle {
   padding: 0.5em 1em;
   border: 1px solid rgb(225, 225, 225);
 }
+/* Make site title bigger and bolder */
+header > div.headline > a {
+  font-weight: 700;
+  font-size: 2.074rem;
+}
+/* Hide WordPress's auto-inserted H1, since we have disabled the Bcgov Engagement theme's auto-inserted H1 */
+div.main-container > div.page-header > h1 {
+  display: none;
+}
+/* Make the header icons larger/thicker on small view ports */
+div.bcgov-menu-container > bcgov-button > button {
+  min-width: 60px;
+}
+div.bcgov-menu-container
+  > bcgov-button
+  > button.search
+  > span.bcgov-svg-icon
+  > svg {
+  height: 36px;
+  width: 36px;
+}
+div.bcgov-menu-container > bcgov-button > button.hamburger > div {
+  background: no-repeat center
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='white' d='M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 -4-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z'/%3E%3C/svg%3E");
+  border: none;
+  height: 36px;
+  width: 36px;
+  margin: 0 0;
+}
+div.bcgov-menu-container > bcgov-button > button.hamburger > div::before {
+  content: none;
+}
+/* H3 headings get a different color to stand out from H2s */
+h3 {
+  color: #38598a;
+}
 
 /* -------- */
 /* Homepage */
